# cookiecutter_pytemplate

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: logging_config.json
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_name}}/: __main__.py
